--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
+mainClassName = 'ucmo.rle71960.Entry'
+
 buildscript {
     repositories {
         jcenter()
@@ -15,6 +17,8 @@ buildscript {
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
     }
 }
+
+apply plugin: 'com.github.johnrengelman.shadow'
 
 repositories {
     mavenCentral()
