--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'ucmo.rle71960.lexical.analysis.Entry'
+mainClassName = 'ucmo.rle71960.lexical.analysis.EntryPoint'
 
 buildscript {
     repositories {
